--- a/client/signup.html
+++ b/client/signup.html
@@ -8,8 +8,9 @@
   <form method='POST' action='/signup'>
     <input name="email" type="text" placeholder="email"></input>
     <input name="password" type="password" placeholder="password"></input>
-    <input name="confirm-password" type="confirm-password" placeholder="confirm password"></input>
+    <input name="confirmPassword" type="password" placeholder="confirm password"></input>
     <input type="submit" value="create user"></input>
   </form>
+  <script type="text/javascript" src="./scripts/login.js"></script>
 </body>
 </html>
