pivoting back to login html pages

--- a/client/signup.html
+++ b/client/signup.html
@@ -11,6 +11,6 @@
     <input name="confirmPassword" type="password" placeholder="confirm password"></input>
     <input type="submit" value="create user"></input>
   </form>
-  <script type="text/javascript" src="./scripts/login.js"></script>
+  <!-- <script type="text/javascript" src="./scripts/login.js"></script> -->
 </body>
 </html>
