--- a/client/index.html
+++ b/client/index.html
@@ -8,12 +8,7 @@
     <title>MatchMadeReady</title>
   </head>
   <body>
-    Login
-    <form method="POST" action='/login'>
-    <input name="username" type="text" placeholder="username"></input>
-    <input name="password" type="password" placeholder="password"></input>
-    <input type='submit' value="login">
-  </form>
+    <main id="root"></main>
   </body>
-  <a href='./signup'>Sign up</a>
+  <script type="text/javscript" src="./index.js"></script>
 </html>
