staging changes before killing it

--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,4 +11,24 @@
     <main id="root"></main>
   </body>
   <script type="text/javscript" src="./index.js"></script>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styling/styles.scss" />
+    <title>MatchMadeReady</title>
+  </head>
+  <body>
+    Login
+    <form method="POST" action='/login'>
+    <input name="username" type="text" placeholder="username"></input>
+    <input name="password" type="password" placeholder="password"></input>
+    <input type='submit' value="login">
+  </form>
+  </body>
+  <a href='./signup'>Sign up</a>
 </html>
