--- a/client/signup.html
+++ b/client/signup.html
@@ -10,7 +10,8 @@
     <input name="password" type="password" placeholder="password"></input>
     <input name="confirmPassword" type="password" placeholder="confirm password"></input>
     <input type="submit" value="create user"></input>
+    
   </form>
-  <!-- <script type="text/javascript" src="./scripts/login.js"></script> -->
+  <script type="text/javascript" src="./scripts/login.js"></script>
 </body>
 </html>
