--- a/client/createAccount.html
+++ b/client/createAccount.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,9 +9,9 @@
   Create Your Account!
   <form method='POST' action='/createAccount'>
     <input name="username" type="text" placeholder="username"></input>
-    <input name="password" type="password" placeholder="password"></input>
-    <input name="confirmPassword" type="password" placeholder="confirm password"></input>
+    <input name="profile-picture" type="image" placeholder=>Upload your profile picture here</input>
+    <input name="user-games" type="password" placeholder="Enter your games here"></input>
     <input type="submit" value="create user"></input>
   </form>
 </body>
-</html>
+</html> -->
