got react router working

--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,10 +10,10 @@
   <body>
     <main id="root"></main>
   </body>
-  <script type="text/javscript" src="./index.js"></script>
-</html> -->
+  <script type="text/javscript" src="./scripts/index.js"></script>
+</html>
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -29,6 +29,7 @@
     <input name="password" type="password" placeholder="password"></input>
     <input type='submit' value="login">
   </form>
-  </body>
   <a href='./signup'>Sign up</a>
-</html>
+  </body>
+  
+</html> -->
