idk anymore, i can't get react router to work

--- a/client/signup.html
+++ b/client/signup.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
   <meta charset="UTF-8">
   <title>Ready To Match?</title>
@@ -14,4 +14,4 @@
   </form>
   <script type="text/javascript" src="./scripts/login.js"></script>
 </body>
-</html>
+</html> -->
