--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
   <body>
     Login
     <form method="POST" action='/login'>
-    <input name="username" type="text" placeholder="username"></input>
+    <input name="email" type="text" placeholder="Email"></input>
     <input name="password" type="password" placeholder="password"></input>
     <input type='submit' value="login">
   </form>
